# mecacipher

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.txt
doc/: mecacipher.tex  references.bib
scripts/: format.sh  pgm-to-png.sh  tex2pdf.sh
src/: ca.h  common.h  endian.h  main.cc  meca.h  mecacipher.h  util.h
tests/: CMakeLists.txt  mecacipher.cc
